--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -56,8 +56,10 @@ hr.star-light {
 }
 
 hr.star-light:after {
-    color: #fff;
-    background-color: #18bc9c;
+    color: #0c43ae;
+    //background-color: #fff;
+    
+    //background-color: #18bc9c;
 }
 
 hr.star-primary {
@@ -66,7 +68,7 @@ hr.star-primary {
 
 hr.star-primary:after {
     color: #2c3e50;
-    background-color: #fff;
+    //background-color: #fff;
 }
 
 .img-centered {
@@ -75,8 +77,8 @@ hr.star-primary:after {
 
 header {
     text-align: center;
-    color: #fff;
-    background: #18bc9c;
+    //background: #18bc9c;
+    //background: #F0F0F0;
 }
 
 header .container {
@@ -86,18 +88,26 @@ header .container {
 
 header img {
     display: block;
-    margin: 0 auto 20px;
+    //margin: 0 auto 20px;
+    margin-left: 20%;
+    margin-right:2%;
+    float:left;
 }
 
 header .intro-text .name {
     display: block;
+    text-align: left;
     text-transform: uppercase;
     font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
     font-size: 2em;
+    line-height:80%;
+    margin-left: 15px;
     font-weight: 700;
 }
 
 header .intro-text .skills {
+    text-align: left;
+    margin-right: 25px;
     font-size: 1.25em;
     font-weight: 300;
 }
@@ -156,15 +166,29 @@ header .intro-text .skills {
 
 .navbar .navbar-nav li a:focus {
     outline: 0;
+
 }
 .navbar-brand {
     line-height: 25px;
     height: 80px;
     float: none;
 }
+.navbar-header {
+    margin-top: auto;
+    margin-bottom: auto;
+    width: 28%;
+
+}
+.navbar-header img {
+    margin-right: 10px;
+    float: left;
+    width:42px;
+}
 .navbar-default,
 .navbar-inverse {
     border: 0;
+    background-color: #2c3e50;
+    //background-color: #4878D8;
 }
 
 section {
@@ -177,8 +201,11 @@ section h2 {
 }
 
 section.success {
-    color: #fff;
-    background: #18bc9c;
+    //color: #fff;
+
+    //background: #18bc9c;
+    //background: #409995;
+    //background: #00A800;
 }
 
 @media(max-width:767px) {
@@ -219,6 +246,7 @@ section.success {
 }
 
 #portfolio .portfolio-item .portfolio-link .caption .caption-content {
+    display:none;
     position: absolute;
     top: 50%;
     width: 100%;
@@ -333,6 +361,8 @@ footer h3 {
 footer .footer-above {
     padding-top: 50px;
     background-color: #2c3e50;
+    //background-color: #4878D8;
+
 }
 
 footer .footer-col {
@@ -342,6 +372,7 @@ footer .footer-col {
 footer .footer-below {
     padding: 25px 0;
     background-color: #233140;
+    //background-color: #010000;
 }
 
 .btn-social {
